Bug 402805 - Right and middle mouse don't work sometimes
Summary: Right and middle mouse don't work sometimes
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 404766 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-02 22:19 UTC by kde
Modified: 2019-03-14 10:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2019-01-02 22:19:40 UTC
SUMMARY
Right and middle mouse clicks don't register sometimes. It's not a hardware error because they work in other applications. The problem appears on different machines too.

STEPS TO REPRODUCE
- Surf a little

OBSERVED RESULT
- Right and middle click won't work on some sites, but on others they do.

EXPECTED RESULT
- All buttons should work

SOFTWARE/OS VERSIONS
Linux: 4.19.11
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.53.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
It can't be reproduced reliably as it seems to fail randomly. Some sites will just not have working right and middle buttons sometime.

The issue also started to appear recently I think, maybe triggered by Qt 5.12 upgrade.

Enabling/disabling auto scroll and mouse gesture plugins had no effect.
Comment 1 Juraj 2019-01-03 14:35:52 UTC
I can confirm this bug. I also experience it.

I can also direct you to second level.
Enable mouse option "Scroll by dragging with middle button" and you will almost always need to use double click to open pages on new tab with middle button. It is rare to open link at new tab with this option enabled on first try, you need to use double click...
Comment 2 kde 2019-01-09 22:32:50 UTC
I think it started happening after the upgrade to Qt 5.12
Comment 3 David Rosca 2019-01-24 09:06:14 UTC
I can't reproduce it, can you post some sites where it happened?
Comment 4 kde 2019-01-25 21:59:56 UTC
There is no pattern of sites where it happens, but it only seems to happen after a while of having Falkon open.

So, a tab will start not registering right/middle clicks anymore, but when I restart Falkon, right/middle clicks in that tab work.
Comment 5 David Rosca 2019-01-26 09:21:30 UTC
Ok, I can reproduce it now.
Comment 6 David Rosca 2019-01-26 09:38:35 UTC
Git commit ab43af9958a16cbead6a982248d68b52d1f4ee34 by David Rosca.
Committed on 26/01/2019 at 09:38.
Pushed by drosca into branch 'master'.

WebView: Fix detecting rwhvqt change with QtWebEngine 5.12
FIXED-IN: 3.1.0

M  +7    -0    src/lib/webengine/webview.cpp

https://commits.kde.org/falkon/ab43af9958a16cbead6a982248d68b52d1f4ee34
Comment 7 David Rosca 2019-03-14 10:20:43 UTC
*** Bug 404766 has been marked as a duplicate of this bug. ***