WebView: Fix detecting rwhvqt change with QtWebEngine 5.12

BUG: 402805
FIXED-IN: 3.1.0